--- a/src/cuartouta/Cursos.form
+++ b/src/cuartouta/Cursos.form
@@ -125,6 +125,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtxtCurso">
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtxtCursoKeyTyped"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jbtnGuardar">
           <Properties>
