--- a/src/reports/students_by_course.jrxml
+++ b/src/reports/students_by_course.jrxml
@@ -32,13 +32,13 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 	</background>
 	<title>
 		<band height="79" splitType="Stretch">
-			<staticText>
-				<reportElement x="0" y="20" width="555" height="30" uuid="12345678-1234-1234-1234-123456789013"/>
-				<textElement textAlignment="Center">
+			<textField>
+				<reportElement x="0" y="20" width="555" height="30" uuid="b306d38a-f013-4f47-a882-0d788a1799a6"/>
+				<textElement textAlignment="Center" markup="none">
 					<font size="20" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Estudiantes del Curso: $P{course_name}]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA["Estudiantes del Curso: "+ $P{course_name}.toUpperCase()]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<columnHeader>
