--- a/src/reportesGestion/students_with_courses.jrxml
+++ b/src/reportesGestion/students_with_courses.jrxml
@@ -35,16 +35,16 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 	<title>
 		<band height="72">
 			<frame>
-				<reportElement mode="Opaque" x="-30" y="-30" width="595" height="92" backcolor="#CCCCCC" uuid="12345678-1234-1234-1234-123456789028"/>
+				<reportElement mode="Opaque" x="-30" y="-30" width="595" height="92" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789028"/>
 				<staticText>
-					<reportElement x="30" y="20" width="293" height="43" forecolor="#333333" uuid="9c886de1-bf33-4660-a9c9-ca5a2176b80d"/>
+					<reportElement x="30" y="20" width="293" height="43" forecolor="#FFFFFF" uuid="9c886de1-bf33-4660-a9c9-ca5a2176b80d"/>
 					<textElement>
 						<font size="34" isBold="true"/>
 					</textElement>
 					<text><![CDATA[ESTUDIANTES]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="395" y="43" width="180" height="20" forecolor="#333333" uuid="ae04f0f7-0ba0-4dbc-8167-672881ef3d91"/>
+					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="ae04f0f7-0ba0-4dbc-8167-672881ef3d91"/>
 					<textElement textAlignment="Right">
 						<font size="14" isBold="false"/>
 					</textElement>
@@ -56,7 +56,7 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 	<columnHeader>
 		<band height="27" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="2" width="80" height="20" forecolor="#333333" backcolor="#F0F0F0" uuid="12345678-1234-1234-1234-123456789029">
+				<reportElement mode="Opaque" x="0" y="2" width="80" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789029">
 
 				</reportElement>
 				<textElement textAlignment="Center">
@@ -65,7 +65,7 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 				<text><![CDATA[Cedula]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="85" y="2" width="80" height="20" forecolor="#333333" backcolor="#F0F0F0" uuid="12345678-1234-1234-1234-123456789030">
+				<reportElement mode="Opaque" x="85" y="2" width="80" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789030">
 
 				</reportElement>
 				<textElement textAlignment="Center">
@@ -74,7 +74,7 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="170" y="2" width="80" height="20" forecolor="#333333" backcolor="#F0F0F0" uuid="12345678-1234-1234-1234-123456789031">
+				<reportElement mode="Opaque" x="170" y="2" width="80" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789031">
 
 				</reportElement>
 				<textElement textAlignment="Center">
@@ -83,7 +83,7 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 				<text><![CDATA[Apellido]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="255" y="2" width="80" height="20" forecolor="#333333" backcolor="#F0F0F0" uuid="12345678-1234-1234-1234-123456789032">
+				<reportElement mode="Opaque" x="255" y="2" width="80" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789032">
 
 				</reportElement>
 				<textElement textAlignment="Center">
@@ -92,7 +92,7 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 				<text><![CDATA[Direccion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="340" y="2" width="80" height="20" forecolor="#333333" backcolor="#F0F0F0" uuid="12345678-1234-1234-1234-123456789033">
+				<reportElement mode="Opaque" x="340" y="2" width="80" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789033">
 
 				</reportElement>
 				<textElement textAlignment="Center">
@@ -101,7 +101,7 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 				<text><![CDATA[Telefono]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="425" y="2" width="130" height="20" forecolor="#333333" backcolor="#F0F0F0" uuid="12345678-1234-1234-1234-123456789034">
+				<reportElement mode="Opaque" x="425" y="2" width="130" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789034">
 
 				</reportElement>
 				<textElement textAlignment="Center">
