--- a/src/reportesGestion/students_by_course.jrxml
+++ b/src/reportesGestion/students_by_course.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
- <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="students_by_course" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="30" bottomMargin="30" uuid="12345678-1234-1234-1234-123456789012">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="students_by_course" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="30" bottomMargin="30" uuid="12345678-1234-1234-1234-123456789012">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -34,65 +34,48 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 		<band height="72">
 			<frame>
 				<reportElement mode="Opaque" x="-30" y="-30" width="595" height="92" backcolor="#001F3F" uuid="b306d38a-f013-4f47-a882-0d788a1799a6"/>
-				<staticText>
-					<reportElement x="30" y="20" width="266" height="43" forecolor="#FFFFFF" uuid="816ce9a6-ccfc-4464-8855-7bac0b16c2d8"/>
-					<textElement>
+				<textField>
+					<reportElement x="30" y="20" width="266" height="43" forecolor="#FFFFFF" uuid="d96295ef-24cb-45d8-a0b0-dac5c982cae3"/>
+					<textElement markup="none">
 						<font size="34" isBold="true"/>
 					</textElement>
-					<text><![CDATA[ESTUDIANTES]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="0a66d632-c5ae-4913-9575-ec59330d14f0"/>
-					<textElement textAlignment="Right">
-						<font size="14" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Estudiantes del curso]]></text>
-				</staticText>
+					<textFieldExpression><![CDATA["ESTUDIANTES"]]></textFieldExpression>
+				</textField>
 			</frame>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="27" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789014">
-
-				</reportElement>
+				<reportElement mode="Opaque" x="0" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789014"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cedula]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="105" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789015">
-
-				</reportElement>
+				<reportElement mode="Opaque" x="105" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789015"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="210" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789016">
-
-				</reportElement>
+				<reportElement mode="Opaque" x="210" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789016"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Apellido]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="315" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789017">
-
-				</reportElement>
+				<reportElement mode="Opaque" x="315" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789017"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Direccion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="420" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789018">
-
-				</reportElement>
+				<reportElement mode="Opaque" x="420" y="2" width="100" height="20" forecolor="#FFFFFF" backcolor="#001F3F" uuid="12345678-1234-1234-1234-123456789018"/>
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
@@ -103,33 +86,23 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 	<detail>
 		<band height="25" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789019">
-
-				</reportElement>
+				<reportElement x="0" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789019"/>
 				<textFieldExpression><![CDATA[$F{est_cedula}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="105" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789020">
-
-				</reportElement>
+				<reportElement x="105" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789020"/>
 				<textFieldExpression><![CDATA[$F{est_nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="210" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789021">
-
-				</reportElement>
+				<reportElement x="210" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789021"/>
 				<textFieldExpression><![CDATA[$F{est_apellido}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="315" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789022">
-
-				</reportElement>
+				<reportElement x="315" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789022"/>
 				<textFieldExpression><![CDATA[$F{est_direccion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="420" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789023">
-
-				</reportElement>
+				<reportElement x="420" y="5" width="100" height="20" uuid="12345678-1234-1234-1234-123456789023"/>
 				<textFieldExpression><![CDATA[$F{est_telefono}]]></textFieldExpression>
 			</textField>
 			<line>
