--- a/src/reportesGestion/students_by_course.jrxml
+++ b/src/reportesGestion/students_by_course.jrxml
@@ -35,11 +35,11 @@ ORDER BY e.est_apellido, e.est_nombre]]>
 			<frame>
 				<reportElement mode="Opaque" x="-30" y="-30" width="595" height="92" backcolor="#001F3F" uuid="b306d38a-f013-4f47-a882-0d788a1799a6"/>
 				<textField>
-					<reportElement x="30" y="20" width="266" height="43" forecolor="#FFFFFF" uuid="d96295ef-24cb-45d8-a0b0-dac5c982cae3"/>
+					<reportElement x="30" y="20" width="535" height="43" forecolor="#FFFFFF" uuid="d96295ef-24cb-45d8-a0b0-dac5c982cae3"/>
 					<textElement markup="none">
 						<font size="34" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA["ESTUDIANTES"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Estudiantes en " + $P{course_name}.toUpperCase()]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
